--- a/apps/widget/i18n/de.json
+++ b/apps/widget/i18n/de.json
@@ -162,7 +162,8 @@
         "invalid_postal_code_dynamic": "Die {{label}} muss 5 Ziffern lang sein.",
         "submit_success": "Die Änderungen wurden gespeichert.",
         "malformed": "Bitte beachte das URL-Format „https://beispiel.de“"
-      }
+      },
+      "requirements_short": "@@common.form.requirements_short|fr:Tous les champs sont obligatoires."
     },
     "notifications": {
       "bad_link": "Dieser Link ist nicht mehr gültig.",
@@ -368,17 +369,21 @@
       "button_submit": "Bestätigen",
       "read_our": "Lesen Sie unsere",
       "moderation_link": "Moderationscharta",
-      "button_propose": "PROPOSER",
-      "mandatory_field": "Tous les champs sont obligatoires.",
-      "proposal": "Votre proposition :"
+      "button_propose": "@@proposal_submit.form.button_propose|fr:PROPOSER",
+      "mandatory_field": "@@proposal_submit.form.mandatory_field|fr:Tous les champs sont obligatoires.",
+      "proposal": "@@proposal_submit.form.proposal|fr:Votre proposition :"
     },
     "authentication": {
       "button_back": "Meinen Vorschlag ändern",
       "title": "Um meinen Vorschlag zu bestätigen,",
-      "subtitle": "registriere ich mich über",
+      "last_step_red": "plus qu'une étape ",
       "button_login_text": "Ich habe bereits ein Konto",
       "button_login_link": "und melde mich an",
-      "back_authentication": "Zurück zum Anmeldebildschirm"
+      "back_authentication": "Zurück zum Anmeldebildschirm",
+      "last_step": "@@proposal_submit.authentication.last_step|fr:pour envoyer votre proposition !",
+      "back": "@@proposal_submit.authentication.back|fr:Retour",
+      "subtitle": "@@proposal_submit.authentication.subtitle|fr:Je m'inscris avec",
+      "button_login": "@@proposal_submit.authentication.button_login|fr:Se connecter"
     },
     "success": {
       "title": "Danke, {{name}}!",
@@ -456,7 +461,9 @@
     "forgot_password_link": "mein Passwort vergessen?",
     "registration_title": "Ich habe kein Konto",
     "registration_link": "und erstelle eins für mich.",
-    "email_doesnot_exist": "Deine {{emailLabel}} oder dein {{passwordLabel}} ist falsch."
+    "email_doesnot_exist": "Deine {{emailLabel}} oder dein {{passwordLabel}} ist falsch.",
+    "connect": "@@login.connect|fr:Se connecter",
+    "forgot_password": "@@login.forgot_password|fr:Mot de passe oublié ?"
   },
   "register": {
     "title": "Ein Konto erstellen",
