--- a/apps/widget/i18n/fr.json
+++ b/apps/widget/i18n/fr.json
@@ -110,6 +110,7 @@
       "show_password": "Afficher le mot de passe",
       "requirements": "Tous les champs sont obligatoires sauf indication contraire.",
       "requirements_short": "Tous les champs sont obligatoires.",
+      "post_code": "Le code postal nous permet d'analyser les résultats par zone géographique.",
       "label": {
         "email": "E-mail",
         "password": "Mot de passe",
@@ -497,7 +498,10 @@
     "privacy_policy_first_part": "J'accepte que Make.org traite ces données pour que je puisse participer et être informé(e) des résultats selon la ",
     "privacy_policy_link": "charte",
     "privacy_policy_last_part": ".",
-    "privacy_policy": "politique de données"
+    "privacy_policy": "politique de données",
+    "make_protect": "Make.org s'engage à protéger vos",
+    "make_protect_link": "données personnelles.",
+    "opt_out": "Je m'oppose à recevoir des e-mails commerciaux de Make.org pour me tenir au courant de nouveaux projets (optionnel)"
   },
   "forgot_password": {
     "title": "Je réinitialise mon mot de passe",
