--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -487,7 +487,7 @@
     "login_link": "Anmelden",
     "gtu_text_first": "Mit der Registrierung erklärst du dich mit unseren {{gtu_link}} ",
     "gtu_text_second": " einverstanden und stimmst zu, dass du E-Mails (in geringer Anzahl) von Make.org erhältst.",
-    "gtu_link": "Allgemeinen Nutzungsbedingungen"
+    "gtu_link": "Allgemeinen Nutzungsbedingungen."
   },
   "legal_consent": {
     "title": "Gesetzliche Zustimmung",
@@ -503,7 +503,7 @@
     "privacy_policy": "Datenschutzerklärung",
     "make_protect": "@@legal_consent.make_protect|fr:Make.org s'engage à protéger vos ",
     "make_protect_link": "@@legal_consent.make_protect_link|fr: données personnelles.",
-    "opt_out": "@@legal_consent.opt_out|fr:Je m'oppose à recevoir des emails marketing de Make.org pour me tenir au courant de nouveaux projets"
+    "opt_out": "Ich möchte keine Marketing-E-Mails mit Informationen über von Make.org durchgeführte Projekte erhalten."
   },
   "forgot_password": {
     "title": "Ich setze mein Passwort zurück",
