--- a/apps/front/i18n/de.json
+++ b/apps/front/i18n/de.json
@@ -559,6 +559,7 @@
     },
     "statistics": {
       "visitor": "make-visitor-id: Dieses Cookie wird verwendet, um Besuche auf unserer Website zu verfolgen und den Datenverkehr auf anonyme und gebündelte Weise zu messen. Navigationsereignisse werden an das Analysetool MixPanel gesendet.",
+      "created-at": "make-visitor-created-at: Dieses Cookie wird verwendet, um das Datum des ersten Besuchs auf der Plattform zu erhalten.",
       "tracking": "Facebook-Tracking-Cookie: Dieses Cookie wird verwendet, um Daten zur Nutzung des Dienstes zu sammeln. Diese Daten sind Teil einer gebündelten Analyse, mit deren Hilfe der Dienst verbessert werden soll. Das Cookie wird auch verwendet, um soziodemografische Daten (Alter, Geschlecht, Region) in gebündelter Form zu sammeln und so die Analyse der Konsultationen zu bereichern."
     },
     "social_media": {
