--- a/apps/widget/i18n/en.json
+++ b/apps/widget/i18n/en.json
@@ -485,6 +485,7 @@
     },
     "statistics": {
       "visitor": "make-visitor-id : this cookie is used to track visits and revisits to our service in order to measure traffic in an anonymous and aggregated fashion. This tracking is not done at the individual level.",
+      "created-at": "make-visitor-created-at : this cookie is used to obtain the date of the first visit on the platform.",
       "tracking": "Facebook tracking cookie: it is used to collect behavioral data on the service for aggregate analysis to improve the service. It is also used to collect socio-demographic data (age, gender, region) in an aggregated way to enrich the analysis of the consultation."
     },
     "social_media": {
